Creating the SQLite database

--- a/creating_SQLite.ipynb
+++ b/creating_SQLite.ipynb
@@ -470,17 +470,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the engine\n",
     "engine = create_engine(\"sqlite:///sold_homes.db\", echo=False)\n",
+    "sqlite_connection = engine.connect()\n",
     "\n",
     "# Reflect existing db into a new model\n",
     "Base = automap_base()\n",
     "# Refelct the tables\n",
     "Base.prepare(engine, reflect=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqlite_table = \"sold_homes\"\n",
+    "sold_homes_df.to_sql(sqlite_table, sqlite_connection, if_exists='fail')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqlite_connection.close()"
    ]
   },
   {
