Updated Machine Learning Model - Seg1 Final

--- a/home_prices_machine_learning.ipynb
+++ b/home_prices_machine_learning.ipynb
@@ -38,6 +38,14 @@
    ]
   },
   {
+   "source": [
+    "### Multiple Linear Regression Machine Learning Model\n",
+    "#### We are creating a multiple linear regression machine learning model to predict \"Sold Price\" based on type, style, features, list price, date, and some other parameters. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -76,7 +84,7 @@
     }
    ],
    "source": [
-    "# Import and read the data into a DataFrame\n",
+    "# Importing the data from SQLite database into a DataFrame\n",
     "house_df = pd.read_sql_table('sold_homes', 'sqlite:///sold_homes.db').drop(columns=['index'])\n",
     "house_df.head()"
    ]
@@ -598,7 +606,7 @@
    "source": [
     "# Calculating RMSE or root mean square error (the lower value is, the better the fit)\n",
     "rmse = (np.sqrt(mean_squared_error(y_test, y_pred)))\n",
-    "print(\"Mean Squared Error {}\".format(rmse))"
+    "print(\"Root Mean Squared Error {}\".format(rmse))"
    ]
   },
   {
