Comparing Various ML Models

--- a/ml_models_comparison.ipynb
+++ b/ml_models_comparison.ipynb
@@ -919,10 +919,12 @@
   },
   {
    "source": [
-    "#### Comparison: Here we can see that though the MAE has improved (compared with Linear Regression) from 51510.07 to 50919.91, the RMSE has increase from 69723.40 to 90781.11 which is quite significant. Also, R2 vlaue has also deteriorated to -0.10. Therefore, it is concluded that Linear Regression works better than XGBRegressor for this dataset."
+    "#### Comparison: Here we can see that though the MAE has improved (compared with Linear Regression) from 51510.07 to 50919.91, the RMSE has increase from 69723.40 to 90781.11 which is quite significant. Also, R2 vlaue has also deteriorated to -0.10. Therefore, it is concluded that Linear Regression works better than SVR for this dataset."
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   }
  ]
 }
